# uv-cannot-install-this

./: README.md  pyproject.toml
src/uv_cannot_install_this/: __main__.py
src/uv_cannot_install_this/data/: AAHSGRrsNSEfJhbLlCsrhjFKqsexKeqFErdoZciflIkeOEbvKSzcnPWCZEUCoEpfocBBOLWpZmcFMpqqJdmaSaKIdTUdrRdhssOr  AARxOSFJXULdwYnmQSwoCVbqRJwyKFBPcNwAzkmeQKuoEJebddIVimQOCiEXHOpDhsJJcLyTlTzujbzowkvXiRKhQPgKiAWBjCfe  AATDEnSDInbFVVgLvAykjckVSsafCGoBnGlyRtWuKCXVQdxVXhJfSnNJtGlRSlnAfvCOyfXpqRIdktUqLIkWQwWaRZsxFZqgwbcL  AAlysHDIMkryLSrshrUwNOeGihtvpSlNABrrSFVafLuhQrrpdXENRYXfNeBrRvZiumOkLlMPkAvPzWbFRvyLUvHCppYlGpakEuSY  ABAWzoYPjqHyFuGwenkBDkVpAuNQDfHdSOYUBtvAoLjkjkzWSHxswQMtQJtONSRqqvDWBjxArAeGsgETOJLrjHLCyfvjtYFxitsk  ABPNXtkPDazLrGnklEQxoVWsLtDTXYxNSgNRrEvSLzbgmUPMzXcRMSfhzwyVnIdVDXIUwHbZmvoKmWUrRUPYtyavkheIomPymGEc  ABdVLdlPDNlexZfazqpUOEKrixXTzomgbfWWWiiHcLVcLKztyVHIXbEPRenQtXnpnmOGATkoxQbkEbEmCjzcxMDMBRiSFCUtXggc  ABjjRGJhXUbTLYqGxEmRxuHatrdJhzhNmJxwvAkbuVMASjskZfgpizHQoqAOCFeJVDTcJUHxAaaALERyROGltlbZUIAYZNNwZlPQ  ABrAqhwSisbVFmqmoZqtHSzMofwGBJmrntaRqTZJozvUeWJkkGlBQioooIlWVsDedkaCFtAffLxvOziRZaPBPRQAFgaKZkAGDiKt  ACLyKyeDVyMYEJxHXtkAAlWuSwzsmyxtfZTwMuwgmbpaApWBcyMPyOeWXHIVeUmAXSRkYSqHgDibpzqYOUNGbxzbtuZFXQNJrBvj  ACbppmzfwGRXCialOjbJFwpDsaDCxOPqkNYFXwiHfFMNMwAxNpmmGkZgygRrQmDRAIFLxDDRBxIdmwLVillrkOvxXmsoqzThCQeO  ACmzTFtFaHMhynKfhJsmXexjLGPsqJnAQvlrHFZlbEFgPkqpezgUNVfxQwAMbFTBrHHQTfgULwowebEiYiUkhLrlZPfRcjnSYZUv  ADAXdLSXXeIKnjmlHPRRprgAxMgZFlqeTTulLTwKmUhvWCKpWfHFSAEBlnJofTNjVsIXwErPpqRutVEyrzuZfsSwqZhuqvJOaEtA  (+9988 more)
